Tested table array conversion to Java class